Support for Java 21